refactored repository test